Release Notes											{#changelog}
=============

- Fixed declaration of `fma` function.


1.7.0 release (2012-10-26):
---------------------------

- Added support for C++11 `noexcept` specifiers.
- Changed C++11 `long long` to be supported on *VC++ 2003* and up.


1.6.1 release (2012-09-13):
---------------------------

- Made `fma` and `fdim` functions available even if corresponding 
  single-precision functions are not.


1.6.0 release (2012-09-12):
---------------------------

- Added `HALF_ENABLE_CPP11_LONG_LONG` to control support for `long long` 
  integers and corresponding mathematical functions.
- Fixed C++98 compatibility on non-VC compilers.


1.5.1 release (2012-08-17):
---------------------------

- Recorrected `std::numeric_limits::round_style` to always return 
  `std::round_indeterminate`, due to overflow-handling deviating from 
  correct round-toward-zero behaviour.


1.5.0 release (2012-08-16):
---------------------------

- Added `half_cast` for explicitly casting between half and any type 
  convertible to/from `float` and allowing the explicit specification of 
  the rounding mode to use.


1.4.0 release (2012-08-12):
---------------------------

- Added support for C++11 generalized constant expressions (`constexpr`).


1.3.1 release (2012-08-11):
---------------------------

- Fixed requirement for `std::signbit` and `std::isnan` (even if C++11 
  `<cmath>` functions disabled) on non-VC compilers.


1.3.0 release (2012-08-10):
---------------------------

- Made requirement for `<cstdint>` and `static_assert` optional and thus 
  made the library C++98-compatible.
- Made support for C++11 features user-overridable through explicit 
  definition of corresponding preprocessor symbols to either 0 or 1.
- Renamed `HALF_ENABLE_HASH` to `HALF_ENABLE_CPP11_HASH` in correspondence 
  with other C++11 preprocessor symbols.


1.2.0 release (2012-08-07):
---------------------------
